<?xml version='1.0' encoding='utf-8'?>
<package format="3">
  <name>ocd_vehicle_dynamics_double_track_cpp</name>
  <version>2.0.0</version>
  <description>A double track vehicle dynamics model implemented in C++</description>
  <maintainer email="simon.sagmeister@tum.de">Simon Sagmeister</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>Eigen3</depend>
  <depend>tum_types_cpp</depend>
  <depend>tsl_logger_cpp</depend>
  <depend>tum_helpers_cpp</depend>
  <depend>ocd_types_cpp</depend>
  <depend>ocd_tire_model_base_cpp</depend>
  <depend>param_management_cpp</depend>
  <depend>ocd_aerodynamics_model_base_cpp</depend>
  <depend>ocd_vehicle_dynamics_model_base_cpp</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_cmake_clang_format</test_depend>
  <test_depend>ament_cmake_cpplint</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>