<?xml version="1.0"?>
<package format="3">
  <name>ocd_external_influence_aggregator_cpp</name>
  <version>1.0.0</version>
  <description>Parametric aggregator that folds any number of external-influence source topics into a single ocd_interfaces/ExternalInfluences message.</description>
  <maintainer email="simon.sagmeister@tum.de">Simon Sagmeister</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tum_msgs</depend>
  <depend>ocd_interfaces</depend>
  <depend>tum_ros_helpers_cpp</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_clang_format</test_depend>
  <test_depend>ament_cmake_cpplint</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
