<?xml version='1.0' encoding='utf-8'?>
<package format="3">
  <name>ocd_vehicle_nodes_cpp</name>
  <version>2.0.0</version>
  <description>Different vehicle models served as ROS2 nodes</description>
  <maintainer email="simon.sagmeister@tum.de">simon</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>ocd_vehicle_model_node_cpp</depend>
  <depend>ocd_vehicle_model_cpp</depend>
  <depend>rclcpp_components</depend>
  
  <depend>ocd_drivetrain_wheel_torque_cpp</depend>
  <depend>ocd_drivetrain_wheel_torque_communication_handler_cpp</depend>
  <depend>ocd_drivetrain_fx_cpp</depend>
  <depend>ocd_drivetrain_fx_communication_handler_cpp</depend>
  
  <depend>ocd_steering_actuator_pt1_cpp</depend>
  <depend>ocd_steering_actuator_pt1_communication_handler_cpp</depend>
  
  <depend>ocd_vehicle_dynamics_double_track_cpp</depend>
  <depend>ocd_vehicle_dynamics_single_track_cpp</depend>
  
  <depend>ocd_tire_models_cpp</depend>
  <depend>ocd_aerodynamics_models_cpp</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_cmake_clang_format</test_depend>
  <test_depend>ament_cmake_cpplint</test_depend>
  <exec_depend>ros2launch</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>