<?xml version="1.0"?>
<package format="3">
  <name>vehicle_model_nodes</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="simon.hoffmann@tum.de">simon</maintainer>
  <license>LGPLv3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>ros_param_helpers_cpp</depend>
  <depend>ros_debug_helpers_cpp</depend>
  <depend>vehicle_model_double_track_cpp</depend>
  <depend>tum_sim_types_cpp</depend>
  <depend>nav_msgs</depend>
  <depend>tum_msgs</depend>
  <depend>autoware_auto_control_msgs</depend>
  <depend>autoware_auto_vehicle_msgs</depend>
  <depend>tum_type_conversions_ros_cpp</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_cmake_clang_format</test_depend>
  <test_depend>ament_cmake_cpplint</test_depend>
  <exec_depend>ros2launch</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
